--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@
 .CMS_maker #effect #result {
     background-color: white;
     width: 100%;
-    height: calc(100% - 30px);
+    min-height: calc(100% - 100px);
     width: 100vw;
 }
 
@@ -121,7 +121,7 @@
 .CMS_maker .bar #size_now {
     color: var(--color_1);
     background-color: var(--color_back);
-    height: 20x;
+    height: 20px;
     padding: 2px 10px;
     margin: -1px 3px;
     font-size: 20px;
